# dmc_vision_benchmark

./: README.md  install_distracting_control.sh  pyproject.toml
dmc_vision_benchmark/: __init__.py
dmc_vision_benchmark/data/: __init__.py  dmc_vb_info.py  env_dmc_vb.py  load_dmc_vb.py  preprocessing.py  tfds.py
dmc_vision_benchmark/environments/: __init__.py  antmaze_env.py  distracting_suite.py  env_dmc_vb.py  env_wrappers.py
dmc_vision_benchmark/environments/ant_maze/: fast_marching.py  level_utils.py  maze_arenas.py  maze_tasks.py  walker_utils.py
dmc_vision_benchmark/evals/: __init__.py  eval_in_envs.py  visualize.py
dmc_vision_benchmark/modules/: __init__.py  autoencoder.py  cnn.py  mlp.py  time_embed.py
dmc_vision_benchmark/rep_learn/: __init__.py  agent_modules.py  config.py  mlp_multiheads.py  td3_bc.py  train.py  train_decoder.py  utils.py
example/: benchmark1.py  benchmark2.py  benchmark3.py  example.py
